<resources>

    <string name="textMenu1">Aonde você gostaria de ir?</string>
    <string name="search">Pesquisar</string>
    <string name="searchr">Pesquise</string>
    <string name="Origem">Origem</string>
    <string name="Destino">Destino</string>
    <string name="othersSearchs">Outras Pesquisas</string>
    <string name="descover">Descubra como encontrar seu acento!</string>
    <string name="card1">Florianópolis - Navegantes</string>
    <string name="textcard1">$ 120 / Pessoa</string>
    <string name="card2">Curitiba - Navegantes</string>
    <string name="textcard2">$ 200 / Pessoa</string>

</resources>